--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,31 @@
 .App {
   padding: 30px;
   display: flex;
+
+}
+
+body {
+  background: url('https://i.pinimg.com/originals/1b/88/81/1b8881be9187f8894f55df268b6a020b.jpg') no-repeat;
+  background-size: 100%;
+  margin: 0;
 }
 
 .App > div {
   margin-right: 50px;
 }
+
+* {
+  transition: all 0.4s;
+  color: #d0bd94;
+  text-shadow: #000000 3px 5px 3px;
+
+}
+
+h3 {
+  margin: 17px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
